# Multiple-shifts-in-gene-network-interactions-shape-phenotypes-of-Drosophila-melanogaster

./: README.md  compute_and_plot_PCA.py  compute_spearman_correlations.py  hierarchical_GLM_walkthrough.py  loading_RNAseq_data.py  multi-channel_Gaussian_Process_walkthrough.py  phenotypic_analyses.py  pyproject.toml  setup.cfg
evorna/: README.md  __init__.py  convergence_metrics.py  estimate_size_factors.py  rnaseq.py
evorna/correlation/: spearman.py
evorna/diffx/: design.py  hglm_plot.py  model.py
evorna/diffx/bayesian/: hierarchical_glm.py  hierarchical_glm_pystan.py
evorna/nonlinear/: bayesian.py  cmdstanify.py  correlations.py
evorna/nonlinear/gaussian_processes/: gp_plot.py  multi.py  single.py
evorna/phenotypic/: phenotype_plots.py  summaries.py
stan/: gaussianprocess_lognbinom2.stan  gaussianprocess_lognbinom_single.stan  glm_nbinom_furthereduced.stan  glm_nbinom_hierarchical.stan  glm_nbinom_hiereduced.stan
