[metadata]
name = evorna
version = 1.0
author = Caetano Souto-Maior
author_email = caetanosoutomaior@protonmail.com
description = Package providing functions to reproduce analyses and figures in Souto-Maior et al. (2021)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caesoma/Multiple-shifts-in-gene-network-interactions-shape-phenotypes-of-Drosophila-melanogaster
project_urls =
    Bug Tracker = https://github.com/caesoma/Multiple-shifts-in-gene-network-interactions-shape-phenotypes-of-Drosophila-melanogaster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU AGPLv3"
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
